Closed Bug 1523888 Opened 5 years ago Closed 5 years ago

Fix rooting hazard in BigInt::toString when called by ValueToID<NoGC>

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: wingo, Assigned: wingo)

References

Details

Attachments

(1 file)

Patch will templatize BigInt::toString on js::AllowGC to fix a rooting hazard.

As found in https://treeherder.mozilla.org/#/jobs?repo=try&revision=1e2069f6bfff99636e271ecca35112b0fed90e2d&group_state=expanded&selectedJob=224675198.

Pushed by ncsoregi@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/59b627e13858
Fix rooting hazard in BigInt::toString when called by ValueToID<NoGC> r=arai,terpri

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: