Bug 1523888 - Fix rooting hazard in BigInt::toString when called by ValueToID<NoGC> r=arai,terpri

Differential Revision: https://phabricator.services.mozilla.com/D18059

--HG--
extra : moz-landing-system : lando